--- a/ic-os/boundary-guestos/docs/Boot.adoc
+++ b/ic-os/boundary-guestos/docs/Boot.adoc
@@ -30,7 +30,9 @@ service are started in the IC-OS boot sequence:
 
 - Start node exporter
 
-- Start ic-gateway
+- Start nginx
+
+- Start icx_proxy
 
 - Start danted socks-proxy
 
@@ -124,9 +126,15 @@ Service: `node_exporter.service`. Depends on `setup-node_exporter-keys.service`.
 
 Starts the `node_exporter` service to make machine metrics accessible externally.
 
-==  Start ic-gateway
+==  Start nginx
 
-Service: ic-gateway.service
+Service: `nginx.service`
+
+Default starter script that comes with the package. Relevant information is here: `nginx.service.d/override.conf` and in `/etc/nginx`
+
+==  Start icx_proxy
+
+Service: icx-proxy.service
 
 - TODO BOUN-179
 
