--- a/README.adoc
+++ b/README.adoc
@@ -98,13 +98,18 @@ All built artifacts will be located in the top-level artifacts/ directory.
 
 Each https://dashboard.internetcomputer.org/releases[release proposal] includes instructions on how to verify the build reproducibility of IC-OS update images.
 
-To verify the build reproducibility of a specific `Elect Replica` proposal, you can just copy the one liner below to a fresh Ubuntu VM 22.04 or higher:
+To verify the build reproducibility of a specific `IC-OS Version Elect` proposal, you can just copy the one liner below to a fresh Ubuntu VM 22.04 or higher:
 
     $ sudo apt-get install -y curl && curl --proto '=https' --tlsv1.2 -sSLO https://raw.githubusercontent.com/dfinity/ic/master/ci/tools/repro-check.sh && chmod +x repro-check.sh && ./repro-check.sh -p <proposal>
 
 If you have the repository already cloned, you can just run:
 
     $ ./ci/tools/repro-check.sh -c <git revision>
+
+Verifying build reproducibility of GuestOS is sufficient for the `Revise Elected GuestOS Versions` NNS proposals.
+For the `Revise Elected HostOS Versions` NNS proposals, you should also verify the build reproducibility of HostOS or SetupOS images in addition to the regular GuestOS, and for that you can use the following command:
+
+    $ ./ci/tools/repro-check.sh -x -c <git revision>
 
 == Contributing
 
